--- a/views/Window2.xaml
+++ b/views/Window2.xaml
@@ -36,6 +36,9 @@
         <DataTemplate DataType="{x:Type viewModel:ViewBookings}">
             <local:ViewBookings/>
         </DataTemplate>
+        <DataTemplate DataType="{x:Type viewModel:HomePageViewModel}">
+            <local:ShowChart/>
+        </DataTemplate>
 
         <Style x:Key="DropdownItemStyle" TargetType="Button">
             <Setter Property="Padding" Value="10"/>
@@ -121,7 +124,7 @@
                                 Height="35"
                                 Margin="15,25,0,40">
 
-                    <Image Source="\images\Logo.png" Height="30"/>
+                    <Image Source="\Images\Logo.png" Height="30"/>
                     <TextBlock Text="We Care"
                                    Foreground="{StaticResource titleColor2}"
                                    FontSize="20"
@@ -289,7 +292,7 @@
                                      StrokeThickness="2"
                                      >
                                                 <Ellipse.Fill>
-                                                    <ImageBrush ImageSource="//images/arjun12 (4).png"/>
+                                                    <ImageBrush ImageSource="\Images\pic.png"/>
                                                 </Ellipse.Fill>
                                             </Ellipse>
                                         </DataTemplate>
@@ -311,7 +314,7 @@
                                                     <DataTemplate>
                                                         <StackPanel Orientation="Horizontal">
 
-                                                            <Image Source="\images\logout1.png" Width="16" Height="16" VerticalAlignment="Center"/>
+                                                            <Image Source="\Images\logout1.png" Width="16" Height="16" VerticalAlignment="Center"/>
 
                                                             <TextBlock Text="Logout" VerticalAlignment="Center"/>
                                                         </StackPanel>
