--- a/views/ViewBookings.xaml
+++ b/views/ViewBookings.xaml
@@ -5,6 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:MVVM_App.views"
              xmlns:viewModel="clr-namespace:MVVM_App.ViewModels"
+             xmlns:fa="http://schemas.fontawesome.io/icons/"
              xmlns:Model="clr-namespace:MVVM_App.Models"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
@@ -21,15 +22,14 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
-                <!--<RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>-->
+      
                 <RowDefinition />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="80"/>
                 <ColumnDefinition Width="Auto"/>
+            
             </Grid.ColumnDefinitions>
             <Grid.Resources>
                 <Style x:Key="tabButton" TargetType="RadioButton">
@@ -74,10 +74,49 @@
                 <RadioButton Content="Today Bookings" Style="{StaticResource tabButton}" Command="{Binding ViewTodayBooking}"/>
                 <RadioButton Content="Booking History" Style="{StaticResource tabButton}" Command="{Binding ViewBookingHistory}" />
             </StackPanel>
-
+            <StackPanel Grid.Row="2" Grid.Column="2" Orientation="Horizontal"
+                        VerticalAlignment="Top" HorizontalAlignment="Center"
+                         Margin="0,0,0,20" >
+            
+                <Border CornerRadius="30">
+                    <TextBox Text="{Binding searchContent}"    
+                    FontSize="13"
+                         Height="35"
+                           Width="370"
+                           Background="Teal"
+                             FontWeight="Medium"
+                             FontFamily="Montserrat"                            
+                             Foreground="{StaticResource plainTextColor3}"
+                             CaretBrush="{StaticResource plainTextColor3}"
+                             BorderBrush="{StaticResource plainTextColor3}"
+                             BorderThickness="0,0,0,1"                             
+                             VerticalContentAlignment="Center"
+                         HorizontalAlignment="Center"
+                             Margin="5,5,0,10" Padding="10,0,0,0" >
+                        <TextBox.Resources>
+                        <Style TargetType="{x:Type Border}">
+                            <Setter Property="CornerRadius" Value="6"/>
+                        </Style>
+                        </TextBox.Resources>
+         
+ 
+                    </TextBox>
+                </Border>
+               
+            </StackPanel>
+            <Button Grid.Column="1" Grid.Row="2"
+                            Command="{Binding SearchCommand}"                                    
+                            FontSize="12"
+                            FontFamily="Montserrat"
+                            Cursor="Hand"
+                            BorderThickness="0" Width="20" Height="20" 
+                            Foreground="Transparent" Background="Transparent" 
+                    VerticalAlignment="Center" HorizontalAlignment="Right" Margin="-5,-7,150,20">
+                <fa:FontAwesome Icon="Search"  Foreground="{StaticResource plainTextColor3}"/>
+            </Button>
             <!--Data grid for table-->
             
-                <DataGrid Grid.Row="2" Grid.Column="1" ItemsSource="{Binding DataGridItems}" AutoGenerateColumns="False" GridLinesVisibility="None" BorderBrush="Transparent"
+                <DataGrid Grid.Row="3" Grid.Column="1" ItemsSource="{Binding DataGridItems}" AutoGenerateColumns="False" GridLinesVisibility="None" BorderBrush="Transparent"
                    HeadersVisibility="Column" CanUserResizeRows="False" 
                       ColumnWidth="130" Background="White"  
                       IsReadOnly="True" HorizontalAlignment="Center"
